erDiagram

    OAUTH_ACCOUNTS {
      UUID id
      UUID user_id
      STRING provider
      STRING provider_account_id
      DATETIME created_at
      DATETIME updated_at
    }

    PROBLEM_LANGUAGE_CONFIGS {
      UUID problem_id
      STRING language_col
      STRING boilerplate
      STRING driver_code
    }

    PROBLEM_TOPICS {
      UUID problem_id
      INT topic_id
    }

    PROBLEMS {
      UUID id
      STRING title
      STRING description
      STRING difficulty
      INT base_time_limit_ms
      INT base_memory_limit_mb
      UUID created_by
      DATETIME created_at
      DATETIME updated_at
      ARRAY hints
    }

    SUBMISSIONS {
      UUID id
      UUID user_id
      UUID problem_id
      STRING language_col
      STRING code
      STRING status
      STRING verdict
      INT execution_time_ms
      FLOAT memory_used_mb
      STRING stdout_snippet
      STRING stderr_snippet
      STRING actual_output
      STRING expected_output
      BOOL is_submit
      INT passed_test_cases
      INT total_test_cases
      UUID failed_test_case_id
      DATETIME created_at
      DATETIME updated_at
    }

    TEST_CASES {
      UUID id
      UUID problem_id
      STRING input_data
      STRING expected_output
      BOOL is_sample
      INT ordering
      DATETIME created_at
    }

    TOPICS {
      INT id
      STRING name
      STRING slug
    }

    USERS {
      UUID id
      STRING email
      STRING name
      STRING password_hash
      BOOL is_verified
      STRING verification_token_hash
      DATETIME verification_token_expires_at
      STRING role
      DATETIME created_at
      DATETIME updated_at
    }

    PROBLEMS ||--o{ PROBLEM_LANGUAGE_CONFIGS : problem_id
    PROBLEMS ||--o{ PROBLEM_TOPICS : problem_id
    PROBLEMS ||--o{ SUBMISSIONS : problem_id
    PROBLEMS ||--o{ TEST_CASES : problem_id
    TEST_CASES ||--o{ SUBMISSIONS : failed_test_case_id
    TOPICS ||--o{ PROBLEM_TOPICS : topic_id
    USERS ||--o{ OAUTH_ACCOUNTS : user_id
    USERS ||--o{ PROBLEMS : created_by
    USERS ||--o{ SUBMISSIONS : user_id
